# lang_chain-GRAPH

./: README.md
pri/: README.md  langgraph.json  mientorno.yml  multia.py  pyproject.toml  tm.txt
pri/app/: aagereflex.py  agent.py  agentgemi.py  agnasy.py  api.py  salextructed.py  tm.py  tools.py
pri/app/c_harish/: aagereflex.py  multiagarq.py  salextructed.py  sqlpart11.py  stream.py  super.py  tm.py
pri/app/c_harish/notebooks/: multiagarq.ipynb
pri/app/c_harish/notebooks/curso_harishneel1/: multiagarq.ipynb  supe_multiagent.ipynb
pri/app/c_harish/notebooks/ejercicios/: estructpyndantic.ipynb
pri/app/c_harish/notebooks/rags/: 1_basic.ipynb  LangGraph_part_2_SQL_Agent.ipynb  sql_part_1.ipynb
pri/app/dbs/: conector.py  sql.py  sql0.py  sql2.py  sqlr.py  tmp.py
pri/app/ejercicios/: ag.py  ag2.py  ag3.py  agent.py  agt.py  as.py  as2.py  at.py  chatbx.py  chm.py  cht2.py  db.py  gmail.py  groq.py  lchat.py  lg.py  m.py  pg.py  primer.py  prompt.py  react.py  rq.py  rw.py  sc.py  splitxt.py  tema.py  vdoc.py  vect.py
pri/notebooks/: agcondiciones.ipynb
