[project]
name = "app"
version = "0.0.1"
description = "Primer paquete de curso langgraph"
authors = [
    {name = "Oscar E calderon"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "langgraph (>=0.4.1,<0.5.0)",
    "langgraph-cli[inmem] (>=0.2.8,<0.3.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 